--- a/.github/workflows/build-and-release-mi.yml
+++ b/.github/workflows/build-and-release-mi.yml
@@ -26,6 +26,7 @@ jobs:
           python -m venv venv
           source venv/bin/activate
           pip install --upgrade pip
+          pip install -r requirements.txt
           pip install pyinstaller
 
       - name: 🚀 Compilation du binaire avec PyInstaller
